--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
     /* ==========
       PARTE 2: CSV + cálculo entre recollidas (validación automática)
-      (sen modo comprobación; con logs e JSON final)
+      – Tempo en cubículo: MINUTOS:SEGUNDOS (M:SS)
     ========== */
     const csvInput=$('csv'), btnCalc=$('btn-calc'), busyBadge=$('busy'),
           okBadge=$('ok-badge'), errBadge=$('err-badge'), csvStatus=$('csv-status'),
@@ -301,150 +301,4 @@
     // Cálculo CSV -> encher "kilos" e recalcular densidade->litros
     btnCalc.addEventListener('click', ()=>{
       if(!parsedRows){ showErr('Debes cargar un CSV válido.'); return; }
-      if(!datesOk()){ showErr('Datas non válidas: a 2ª recollida non pode ser anterior á 1ª.'); return; }
-      setBusy(true); okBadge.style.display='none'; errBadge.style.display='none'; sumPanel.style.display='none';
-      setTimeout(()=>{
-        try{
-          const a=getPickerDate(dt1.value), b=getPickerDate(dt2.value);
-          const {totalKilos, contadas, debug} = computeSum(parsedRows, a, b);
-
-          // Resumo UI
-          outRange.textContent=`${fmtDate(a)} → ${fmtDate(b)}`;
-          outRows.textContent=String(contadas);
-          outKilosCsv.textContent=new Decimal(totalKilos).toFixed(2);
-          outEstadoCsv.textContent='Cálculo rematado ✅';
-          sumPanel.style.display='block';
-
-          // Pasa kilos ao campo e recalcula densidade->litros
-          const kRounded = Math.round(totalKilos);
-          el.k.value = String(kRounded);
-          recalc();
-
-          // ---- LOG FINAL JSON para análise ----
-          console.log('%cResumo JSON','color:#059669;font-weight:bold');
-          console.log(JSON.stringify(debug, null, 2));
-
-        }catch(e){
-          showErr(e.message || 'Produciuse un erro no cálculo.');
-        }finally{
-          setBusy(false);
-        }
-      },50);
-    });
-
-    function showInfo(msg){csvStatus.className='hint'; csvStatus.textContent=msg;}
-    function showOk(msg){csvStatus.className='ok'; csvStatus.textContent=msg;}
-    function showErr(msg){csvStatus.className='error show'; csvStatus.textContent=msg;}
-
-    // --- CSV parsing & validación ---
-    function validateAndParseCSV(text){
-      if(text.charCodeAt(0)===0xFEFF){ text = text.slice(1); }
-      const lines=text.replace(/\r\n?/g,'\n').split('\n').filter(l=>l.trim().length>0);
-      if(lines.length<2) throw new Error('O CSV está baleiro ou sen datos.');
-      const cols = lines[0].split(',').map(s=>s.trim().replace(/^"(.*)"$/,'$1'));
-      const exp = ["Número de vaca","Fecha/hora de visita","Producción de leche","Tiempo en cubículo"];
-      if(cols.length!==4 || exp.some((c,i)=>c!==cols[i])){
-        throw new Error('Cabeceira incorrecta. Ten que ser o CSV exportado de Lely Horizon con esta cabeceira exacta: "Número de vaca","Fecha/hora de visita","Producción de leche","Tiempo en cubículo"');
-      }
-
-      const rows=[];
-      for(let i=1;i<lines.length;i++){
-        const raw=lines[i].trim();
-        const parts=raw.split(',').map(s=>s.trim().replace(/^"(.*)"$/,'$1'));
-        if(parts.length!==4) throw new Error(`Fila ${i+1}: número de columnas incorrecto.`);
-        const [numVaca,fechaHora,prod,tempoCub]=parts;
-
-        if(!/^\d+$/.test(numVaca)) throw new Error(`Fila ${i+1}: "Número de vaca" debe ser enteiro.`);
-        if(!/^\d{4}-\d{2}-\d{2} \d{2}:\d{2}$/.test(fechaHora)) throw new Error(`Fila ${i+1}: "Fecha/hora de visita" debe ser YYYY-MM-DD HH:MM.`);
-        if(!/^\d+(?:\.\d+)?$/.test(prod)) throw new Error(`Fila ${i+1}: "Producción de leche" debe ser número con punto decimal (ex. 5.2).`);
-        if(!/^\d{1,2}:\d{2}$/.test(tempoCub)) throw new Error(`Fila ${i+1}: "Tiempo en cubículo" debe ser H:MM ou HH:MM.`);
-
-        const visita=parseYmdHmLocal(fechaHora);
-        const kilos=parseFloat(prod);
-        const cubMin=hmToMinutes(tempoCub);
-        rows.push({vaca:parseInt(numVaca,10), visita, kilos, cubMin});
-      }
-      return {rows};
-    }
-
-    // Datas utilidades
-    function parseYmdHmLocal(s){
-      const [d,h]=s.split(' '), [Y,M,D]=d.split('-').map(n=>parseInt(n,10));
-      const [HH,MM]=h.split(':').map(n=>parseInt(n,10));
-      return new Date(Y,M-1,D,HH,MM,0,0);
-    }
-    function hmToMinutes(hm){const [h,m]=hm.split(':').map(n=>parseInt(n,10)); return h*60+m;}
-    function getPickerDate(val){
-      if(!val) return null;
-      const [d,h]=val.split('T'); if(!d||!h) return null;
-      const [Y,M,DD]=d.split('-').map(n=>parseInt(n,10));
-      const [HH,MM]=h.split(':').map(n=>parseInt(n,10));
-      if([Y,M,DD,HH,MM].some(Number.isNaN)) return null;
-      return new Date(Y,M-1,DD,HH,MM,0,0);
-    }
-    function addMinutes(d,mins){return new Date(d.getFullYear(),d.getMonth(),d.getDate(),d.getHours(),d.getMinutes()+mins,d.getSeconds(),d.getMilliseconds());}
-    function fmt2(n){return String(n).padStart(2,'0');}
-    function fmtDate(d){return `${d.getFullYear()}-${fmt2(d.getMonth()+1)}-${fmt2(d.getDate())} ${fmt2(d.getHours())}:${fmt2(d.getMinutes())}`;}
-
-    // ALGORITMO (versión “anterior”):
-    // Inclúe se: visita >= dtIni e visita < dtFin.  [inicio, fin)
-    // EXCLÚE se: visita + tempo_en_cubículo (min) > dtFin.
-    // Ademais: LOG por exclusión e JSON final para análise.
-    function computeSum(rows, dtIni, dtFin){
-      let total=new Decimal(0), contadas=0;
-
-      const tIni = dtIni.getTime(), tFin = dtFin.getTime();
-      const included=[], excluded=[];
-      let excBefore=0, excAfterOrEqual=0, excCubiculo=0;
-
-      console.groupCollapsed('%cExclusións CSV','color:#2563eb');
-
-      for(const r of rows){
-        const t=r.visita.getTime();
-
-        // fóra do intervalo [inicio, fin)
-        if(t < tIni){
-          excBefore++;
-          excluded.push({vaca:r.vaca, visita:fmtDate(r.visita), kilos:+r.kilos.toFixed(1), cubiculo_min:r.cubMin, fin_visita:fmtDate(addMinutes(r.visita,r.cubMin)), razon:'antes_1'});
-          console.log(`[EXCLUÍDA] ${fmtDate(r.visita)} | ${r.kilos.toFixed(1)} kg | antes da 1ª recollida`);
-          continue;
-        }
-        if(t >= tFin){
-          excAfterOrEqual++;
-          excluded.push({vaca:r.vaca, visita:fmtDate(r.visita), kilos:+r.kilos.toFixed(1), cubiculo_min:r.cubMin, fin_visita:fmtDate(addMinutes(r.visita,r.cubMin)), razon:'fora_intervalo_>=2'});
-          console.log(`[EXCLUÍDA] ${fmtDate(r.visita)} | ${r.kilos.toFixed(1)} kg | fóra do intervalo (≥ 2ª recollida)`);
-          continue;
-        }
-
-        // supera a 2ª por tempo en cubículo
-        const finVisita = addMinutes(r.visita, r.cubMin);
-        if(finVisita.getTime() > tFin){
-          excCubiculo++;
-          excluded.push({vaca:r.vaca, visita:fmtDate(r.visita), kilos:+r.kilos.toFixed(1), cubiculo_min:r.cubMin, fin_visita:fmtDate(finVisita), razon:'supera_2_por_cubiculo'});
-          console.log(`[EXCLUÍDA] ${fmtDate(r.visita)} | ${r.kilos.toFixed(1)} kg | supera a 2ª recollida por tempo en cubículo (fin: ${fmtDate(finVisita)})`);
-          continue;
-        }
-
-        // incluída
-        total = total.plus(r.kilos);
-        contadas++;
-        included.push({vaca:r.vaca, visita:fmtDate(r.visita), kilos:+r.kilos.toFixed(1), cubiculo_min:r.cubMin, fin_visita:fmtDate(finVisita)});
-      }
-      console.groupEnd();
-
-      const debug = {
-        intervalo: { inicio: fmtDate(dtIni), fin: fmtDate(dtFin), regra_intervalo: "[inicio, fin)", regra_cubiculo: "excluir se (visita + cubículo) > fin" },
-        totais: { filas_total: rows.length, filas_incluidas: contadas, filas_excluidas: excluded.length },
-        excluidas_por_motivo: { antes_1: excBefore, fora_intervalo_maior_ou_igual_2: excAfterOrEqual, supera_2_por_cubiculo: excCubiculo },
-        kilos_incluidos: +total.toFixed(2),
-        listas: { incluidas: included, excluidas: excluded }
-      };
-
-      return { totalKilos: total.toNumber(), contadas, debug };
-    }
-
-    // Inicialización
-    setMinForDt2();
-  </script>
-</body>
-</html>
+      if(!datesOk()){ showErr('Datas non válidas: a 2ª
