--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cálculo litros desde kilos (densidade leite) + CSV (Lely Horizon)</title>
 
+  <!-- Favicon online (Twemoji: vaso de leite 🥛) -->
+  <link rel="icon" type="image/png" sizes="72x72"
+        href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f95b.png">
+  <link rel="icon" type="image/png" sizes="36x36"
+        href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/36x36/1f95b.png">
+
   <script src="https://cdn.jsdelivr.net/npm/decimal.js@10.4.3/decimal.min.js"></script>
 
   <style>
@@ -27,8 +33,8 @@
     .hint{font-size:.8rem;color:var(--muted);margin-top:6px}
     .error{font-size:.8rem;color:var(--bad);margin-top:6px;display:none}
     .error.show{display:block}
-    .result{margin-top:16px;padding:14px;border-radius:12px;background:linear-gradient(180deg,var(--accent-2),#e9f4ff);border:1px solid rgba(106,166,255,.35)}
-    .result h2{margin:0 0 6px;font-size:1.05rem}
+    .result{margin-top:16px;padding:14px;border-radius:12px;background:linear-gradient(180deg,var(--accent-2),#e9f4ff);border:1px solid rgba(106,166,255,.35);position:relative}
+    .result h2{margin:0 0 6px;font-size:1.05rem;display:flex;align-items:center;gap:8px}
     .kv{display:flex;justify-content:space-between;gap:10px;padding:8px 0;border-top:1px dashed rgba(0,0,0,.08)}
     .kv:first-of-type{border-top:none}
     .kv b{font-variant-numeric:tabular-nums}
@@ -45,6 +51,14 @@
     @keyframes spin{to{transform:rotate(360deg)}}
     @media (max-width:560px){.grid{grid-template-columns:1fr}}
     code.small{font-size:.8rem}
+    /* Tooltip info */
+    .info-btn{display:inline-flex;align-items:center;justify-content:center;width:22px;height:22px;border-radius:999px;background:#fff;border:1px solid #dbe5ff;color:#2563eb;font-weight:600;cursor:pointer}
+    .tooltip{position:absolute;top:10px;right:10px}
+    .tooltip-panel{position:absolute;top:28px;right:0;min-width:280px;max-width:92vw;padding:10px 12px;background:#fff;border:1px solid #e5e7eb;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,.08);font-size:.9rem;color:#334155;display:none;z-index:10}
+    .tooltip-panel code{font-size:.85rem;background:#f8fafc;padding:2px 4px;border-radius:6px}
+    .tooltip.open .tooltip-panel{display:block}
+    /* Créditos simples no pé */
+    .credit{margin-top:12px;text-align:center;color:#94a3b8;font-size:.85rem}
   </style>
 </head>
 <body>
@@ -84,10 +98,26 @@
         </div>
 
         <div class="result full" aria-live="polite">
-          <h2>Resultado</h2>
+          <h2>
+            Resultado
+            <!-- Tooltip info dentro do panel de resultados -->
+            <span class="tooltip" id="tip-info">
+              <button type="button" class="info-btn" aria-label="Información">i</button>
+              <div class="tooltip-panel" role="dialog" aria-label="Información">
+                <strong>Modelo de densidade</strong><br>
+                Base: <b>1,032 g/ml</b> a <b>20&nbsp;°C</b> (G=3,5&nbsp;%, P=3,3&nbsp;%).<br>
+                Axustes: por cada +1&nbsp;°C → −0,0002 g/ml; −1&nbsp;°C → +0,0002 g/ml.<br>
+                Por cada +1&nbsp;% de graxa → −0,0046 g/ml; −1&nbsp;% → +0,0046 g/ml.<br>
+                Por cada +1&nbsp;% de proteína → +0,0010 g/ml; −1&nbsp;% → −0,0010 g/ml.<br>
+                Fórmula: <code>ρ = 1,032 + (G−3,5)·(−0,0046) + (P−3,3)·(0,0010) + (T−20)·(−0,0002)</code><br>
+                (onde G e P van en %, e T en °C).
+              </div>
+            </span>
+          </h2>
           <div class="kv"><span>🧪 Densidade estimada (g/ml):</span><b id="out-densidade" class="muted">—</b></div>
           <div class="kv"><span>🥛 Litros estimados (L):</span><b id="out-litros" class="muted">—</b></div>
           <div class="kv"><span>Estado:</span><b id="out-estado" class="muted">Introduce valores válidos…</b></div>
+          <div class="credit">Toni Pumar®</div>
         </div>
       </div>
 
@@ -98,7 +128,8 @@
           <label for="csv">CSV de visitas (Lely Horizon, formato exacto)</label>
           <input id="csv" type="file" accept=".csv" />
           <div class="hint">
-            Cabeceira obrigatoria (Horizon): <code class="small">"Número de vaca","Fecha/hora de visita","Producción de leche","Tiempo en cubículo"</code>
+            Cabeceira obrigatoria (Horizon): <code class="small">"Número de vaca","Fecha/hora de visita","Producción de leche","Tiempo en cubículo"</code><br>
+            <em>Nota:</em> “Tempo en cubículo” enténdese como <b>minutos:segundos (MM:SS)</b>.
           </div>
           <div id="csv-status" class="hint" aria-live="polite"></div>
         </div>
@@ -127,17 +158,6 @@
           <div class="kv"><span>⚖️ Kilos totais (CSV):</span><b id="out-kilos-csv" class="ok">—</b></div>
           <div class="kv"><span>Estado:</span><b id="out-estado-csv" class="ok">—</b></div>
         </div>
-      </div>
-
-      <div class="footer">
-        <strong>Modelo de densidade.</strong>
-        Base: <b>1,032 g/ml</b> a <b>20&nbsp;°C</b> (G=3,5&nbsp;%, P=3,3&nbsp;%).
-        Axustes: por cada +1&nbsp;°C → −0,0002 g/ml; por cada −1&nbsp;°C → +0,0002 g/ml.
-        Por cada +1&nbsp;% de graxa → −0,0046 g/ml; −1&nbsp;% → +0,0046 g/ml.
-        Por cada +1&nbsp;% de proteína → +0,0010 g/ml; −1&nbsp;% → −0,0010 g/ml.
-        <br>
-        Fórmula: <code>ρ = 1,032 + (G−3,5)·(−0,0046) + (P−3,3)·(0,0010) + (T−20)·(−0,0002)</code>
-        (onde G e P van en %, e T en °C).
       </div>
     </div>
   </div>
@@ -241,7 +261,7 @@
 
     /* ==========
       PARTE 2: CSV + cálculo entre recollidas (validación automática)
-      – Tempo en cubículo: MINUTOS:SEGUNDOS (M:SS)
+      (intervalo [inicio, fin), exclusión por cubículo; MM:SS)
     ========== */
     const csvInput=$('csv'), btnCalc=$('btn-calc'), busyBadge=$('busy'),
           okBadge=$('ok-badge'), errBadge=$('err-badge'), csvStatus=$('csv-status'),
@@ -257,6 +277,16 @@
       dt1.disabled=v; dt2.disabled=v;
       busyBadge.style.display=v?'inline-flex':'none';
     }
+
+    // Tooltip toggle
+    (function(){
+      const tip = document.getElementById('tip-info');
+      const btn = tip.querySelector('.info-btn');
+      btn.addEventListener('click', ()=> tip.classList.toggle('open'));
+      document.addEventListener('click', (e)=>{
+        if(!tip.contains(e.target)) tip.classList.remove('open');
+      });
+    })();
 
     function setMinForDt2(){
       if(!dt1.value){ dt2.min=''; return; }
@@ -301,4 +331,154 @@
     // Cálculo CSV -> encher "kilos" e recalcular densidade->litros
     btnCalc.addEventListener('click', ()=>{
       if(!parsedRows){ showErr('Debes cargar un CSV válido.'); return; }
-      if(!datesOk()){ showErr('Datas non válidas: a 2ª
+      if(!datesOk()){ showErr('Datas non válidas: a 2ª recollida non pode ser anterior á 1ª.'); return; }
+      setBusy(true); okBadge.style.display='none'; errBadge.style.display='none'; sumPanel.style.display='none';
+      setTimeout(()=>{
+        try{
+          const a=getPickerDate(dt1.value), b=getPickerDate(dt2.value);
+          const {totalKilos, contadas, debug} = computeSum(parsedRows, a, b);
+
+          // Resumo UI
+          outRange.textContent=`${fmtDate(a)} → ${fmtDate(b)}`;
+          outRows.textContent=String(contadas);
+          outKilosCsv.textContent=new Decimal(totalKilos).toFixed(2);
+          outEstadoCsv.textContent='Cálculo rematado ✅';
+          sumPanel.style.display='block';
+
+          // Pasa kilos ao campo e recalcula densidade->litros
+          const kRounded = Math.round(totalKilos);
+          el.k.value = String(kRounded);
+          recalc();
+
+          // ---- LOG FINAL JSON para análise ----
+          console.log('%cResumo JSON','color:#059669;font-weight:bold');
+          console.log(JSON.stringify(debug, null, 2));
+        }catch(e){
+          showErr(e.message || 'Produciuse un erro no cálculo.');
+        }finally{
+          setBusy(false);
+        }
+      },50);
+    });
+
+    function showInfo(msg){csvStatus.className='hint'; csvStatus.textContent=msg;}
+    function showOk(msg){csvStatus.className='ok'; csvStatus.textContent=msg;}
+    function showErr(msg){csvStatus.className='error show'; csvStatus.textContent=msg;}
+
+    // --- CSV parsing & validación ---
+    function validateAndParseCSV(text){
+      if(text.charCodeAt(0)===0xFEFF){ text = text.slice(1); }
+      const lines=text.replace(/\r\n?/g,'\n').split('\n').filter(l=>l.trim().length>0);
+      if(lines.length<2) throw new Error('O CSV está baleiro ou sen datos.');
+      const cols = lines[0].split(',').map(s=>s.trim().replace(/^"(.*)"$/,'$1'));
+      const exp = ["Número de vaca","Fecha/hora de visita","Producción de leche","Tiempo en cubículo"];
+      if(cols.length!==4 || exp.some((c,i)=>c!==cols[i])){
+        throw new Error('Cabeceira incorrecta. Ten que ser o CSV exportado de Lely Horizon con esta cabeceira exacta: "Número de vaca","Fecha/hora de visita","Producción de leche","Tiempo en cubículo"');
+      }
+
+      const rows=[];
+      for(let i=1;i<lines.length;i++){
+        const raw=lines[i].trim();
+        const parts=raw.split(',').map(s=>s.trim().replace(/^"(.*)"$/,'$1'));
+        if(parts.length!==4) throw new Error(`Fila ${i+1}: número de columnas incorrecto.`);
+        const [numVaca,fechaHora,prod,tempoCub]=parts;
+
+        if(!/^\d+$/.test(numVaca)) throw new Error(`Fila ${i+1}: "Número de vaca" debe ser enteiro.`);
+        if(!/^\d{4}-\d{2}-\d{2} \d{2}:\d{2}$/.test(fechaHora)) throw new Error(`Fila ${i+1}: "Fecha/hora de visita" debe ser YYYY-MM-DD HH:MM.`);
+        if(!/^\d+(?:\.\d+)?$/.test(prod)) throw new Error(`Fila ${i+1}: "Producción de leche" debe ser número con punto decimal (ex. 5.2).`);
+        if(!/^\d{1,2}:\d{2}$/.test(tempoCub)) throw new Error(`Fila ${i+1}: "Tiempo en cubículo" debe ser MM:SS (minutos:segundos).`);
+
+        const visita=parseYmdHmLocal(fechaHora);
+        const kilos=parseFloat(prod);
+        const cubSec=mmssToSeconds(tempoCub); // MM:SS → segundos
+        rows.push({vaca:parseInt(numVaca,10), visita, kilos, cubSec});
+      }
+      return {rows};
+    }
+
+    // Datas utilidades
+    function parseYmdHmLocal(s){
+      const [d,h]=s.split(' '), [Y,M,D]=d.split('-').map(n=>parseInt(n,10));
+      const [HH,MM]=h.split(':').map(n=>parseInt(n,10));
+      return new Date(Y,M-1,D,HH,MM,0,0);
+    }
+    function mmssToSeconds(mmss){
+      const [mm,ss]=mmss.split(':').map(n=>parseInt(n,10));
+      return (mm*60 + ss);
+    }
+    function getPickerDate(val){
+      if(!val) return null;
+      const [d,h]=val.split('T'); if(!d||!h) return null;
+      const [Y,M,DD]=d.split('-').map(n=>parseInt(n,10));
+      const [HH,MM]=h.split(':').map(n=>parseInt(n,10));
+      if([Y,M,DD,HH,MM].some(Number.isNaN)) return null;
+      return new Date(Y,M-1,DD,HH,MM,0,0);
+    }
+    function addSeconds(d,secs){
+      return new Date(d.getFullYear(),d.getMonth(),d.getDate(),d.getHours(),d.getMinutes(),d.getSeconds()+secs,0);
+    }
+    function fmt2(n){return String(n).padStart(2,'0');}
+    function fmtDate(d){return `${d.getFullYear()}-${fmt2(d.getMonth()+1)}-${fmt2(d.getDate())} ${fmt2(d.getHours())}:${fmt2(d.getMinutes())}`;}
+
+    // ALGORITMO:
+    // Inclúe se: visita >= dtIni e visita < dtFin.  [inicio, fin)
+    // EXCLÚE se: visita + tempo_en_cubículo (en segundos) > dtFin.
+    // Logs por exclusión e JSON final para análise.
+    function computeSum(rows, dtIni, dtFin){
+      let total=new Decimal(0), contadas=0;
+
+      const tIni = dtIni.getTime(), tFin = dtFin.getTime();
+      const included=[], excluded=[];
+      let excBefore=0, excAfterOrEqual=0, excCubiculo=0;
+
+      console.groupCollapsed('%cExclusións CSV','color:#2563eb');
+
+      for(const r of rows){
+        const t=r.visita.getTime();
+
+        // fóra do intervalo [inicio, fin)
+        if(t < tIni){
+          excBefore++;
+          excluded.push({vaca:r.vaca, visita:fmtDate(r.visita), kilos:+r.kilos.toFixed(1), cubiculo_seg:r.cubSec, fin_visita:fmtDate(addSeconds(r.visita,r.cubSec)), razon:'antes_1'});
+          console.log(`[EXCLUÍDA] ${fmtDate(r.visita)} | ${r.kilos.toFixed(1)} kg | antes da 1ª recollida`);
+          continue;
+        }
+        if(t >= tFin){
+          excAfterOrEqual++;
+          excluded.push({vaca:r.vaca, visita:fmtDate(r.visita), kilos:+r.kilos.toFixed(1), cubiculo_seg:r.cubSec, fin_visita:fmtDate(addSeconds(r.visita,r.cubSec)), razon:'fora_intervalo_>=2'});
+          console.log(`[EXCLUÍDA] ${fmtDate(r.visita)} | ${r.kilos.toFixed(1)} kg | fóra do intervalo (≥ 2ª recollida)`);
+          continue;
+        }
+
+        // supera a 2ª pola suma co cubículo (en segundos)
+        const finVisita = addSeconds(r.visita, r.cubSec);
+        if(finVisita.getTime() > tFin){
+          excCubiculo++;
+          excluded.push({vaca:r.vaca, visita:fmtDate(r.visita), kilos:+r.kilos.toFixed(1), cubiculo_seg:r.cubSec, fin_visita:fmtDate(finVisita), razon:'supera_2_por_cubiculo'});
+          console.log(`[EXCLUÍDA] ${fmtDate(r.visita)} | ${r.kilos.toFixed(1)} kg | supera a 2ª recollida por tempo en cubículo (fin: ${fmtDate(finVisita)})`);
+          continue;
+        }
+
+        // incluída
+        total = total.plus(r.kilos);
+        contadas++;
+        included.push({vaca:r.vaca, visita:fmtDate(r.visita), kilos:+r.kilos.toFixed(1), cubiculo_seg:r.cubSec, fin_visita:fmtDate(finVisita)});
+      }
+      console.groupEnd();
+
+      const debug = {
+        intervalo: { inicio: fmtDate(dtIni), fin: fmtDate(dtFin), regra_intervalo: "[inicio, fin)", regra_cubiculo: "excluir se (visita + cubículo) > fin", interpretacion_cubiculo: "MM:SS (minutos:segundos)" },
+        totais: { filas_total: rows.length, filas_incluidas: contadas, filas_excluidas: excluded.length },
+        excluidas_por_motivo: { antes_1: excBefore, fora_intervalo_maior_ou_igual_2: excAfterOrEqual, supera_2_por_cubiculo: excCubiculo },
+        kilos_incluidos: +total.toFixed(2),
+        listas: { incluidas: included, excluidas: excluded }
+      };
+
+      return { totalKilos: total.toNumber(), contadas, debug };
+    }
+
+    // Inicialización
+    setMinForDt2();
+  </script>
+</body>
+</html>
