--- a/index.html
+++ b/index.html
@@ -14,72 +14,108 @@
   <script src="https://cdn.jsdelivr.net/npm/decimal.js@10.4.3/decimal.min.js"></script>
 
   <style>
-    :root{
-      --bg:#f7f9fc; --card:#fff; --accent:#6aa6ff; --accent-2:#9ed0ff;
-      --text:#1f2937; --muted:#6b7280; --ok:#10b981; --bad:#ef4444; --ring:rgba(106,166,255,.35)
+  :root{
+    --bg:#f7f9fc; --card:#fff; --accent:#6aa6ff; --accent-2:#9ed0ff;
+    --text:#1f2937; --muted:#6b7280; --ok:#10b981; --bad:#ef4444; --ring:rgba(106,166,255,.35)
+  }
+  *{box-sizing:border-box}
+  html,body{margin:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,'Helvetica Neue',Arial}
+  .wrap{min-height:100dvh;display:flex;align-items:center;justify-content:center;padding:18px}
+  .card{
+    width:100%;max-width:760px;background:var(--card);border-radius:16px;
+    padding:20px 18px;box-shadow:0 10px 30px rgba(0,0,0,.06),0 2px 6px rgba(0,0,0,.04);
+    border:1px solid rgba(0,0,0,.04);
+  }
+  h1{font-size:1.2rem;margin:0 0 12px}
+  p.sub{margin:0 0 16px;color:var(--muted);font-size:.95rem}
+
+  /* --- Layout --- */
+  .grid{display:grid;gap:12px;grid-template-columns:1fr 1fr}
+  .grid .full{grid-column:1/-1}
+  .row{
+    padding:12px;border:1px dashed rgba(0,0,0,.08);border-radius:12px;background:#fbfdff;
+  }
+  .field{
+    min-width:0; /* IMPORTANT: evita desbordes en grid cando o input é ancho */
+  }
+
+  label{display:block;font-size:.9rem;margin:0 0 6px 2px;color:#334155}
+
+  /* --- Inputs & botóns --- */
+  input,button{
+    width:100%;max-width:100%;display:block;
+    padding:12px 14px;border-radius:12px;border:1.5px solid #e5e7eb;background:#fafcff;
+    font-size:1rem;outline:none;transition:border .15s,box-shadow .15s,background .15s
+  }
+  input:focus{border-color:var(--accent);box-shadow:0 0 0 4px var(--ring);background:#fff}
+  input.is-bad{border-color:var(--bad)}
+
+  /* Datetime: asegúrate de que nunca desborda en móbil */
+  input[type="datetime-local"]{
+    inline-size:100%;
+    max-inline-size:100%;
+    min-height:44px; /* tap target cómodo */
+    padding-right:14px; /* espazo para iconos nativos */
+    overflow:hidden; /* corta calquera píxel “rebelde” */
+  }
+  /* Algúns navegadores meten botóns internos; reducimos impacto */
+  input::-webkit-calendar-picker-indicator{ margin-left:0; }
+  input::-webkit-inner-spin-button,
+  input::-webkit-clear-button{ height:1.2em; }
+
+  .hint{font-size:.8rem;color:var(--muted);margin-top:6px}
+  .error{font-size:.8rem;color:var(--bad);margin-top:6px;display:none}
+  .error.show{display:block}
+
+  .result{
+    margin-top:16px;padding:14px;border-radius:12px;
+    background:linear-gradient(180deg,var(--accent-2),#e9f4ff);
+    border:1px solid rgba(106,166,255,.35);position:relative
+  }
+  .result h2{margin:0 0 6px;font-size:1.05rem;display:flex;align-items:center;gap:8px}
+  .kv{display:flex;justify-content:space-between;gap:10px;padding:8px 0;border-top:1px dashed rgba(0,0,0,.08)}
+  .kv:first-of-type{border-top:none}
+  .kv b{font-variant-numeric:tabular-nums}
+  .ok{color:var(--ok)} .muted{color:var(--muted)}
+
+  .actions{display:flex;gap:10px;flex-wrap:wrap}
+  button.primary{background:linear-gradient(180deg,#6aa6ff,#4f8df3);color:#fff;border:none}
+  button:disabled{opacity:.6;cursor:not-allowed}
+  .badge{display:inline-flex;align-items:center;gap:8px;font-size:.9rem;padding:8px 10px;border-radius:999px;border:1px solid #e5e7eb;background:#fff;color:#374151}
+  .badge.ok{border-color:rgba(16,185,129,.25);color:#065f46;background:rgba(16,185,129,.06)}
+  .badge.err{border-color:rgba(239,68,68,.25);color:#7f1d1d;background:rgba(239,68,68,.06)}
+  .beta{display:inline-block;font-size:.75rem;background:#fff3cd;border:1px solid #facc15;color:#854d0e;padding:6px 10px;border-radius:999px}
+
+  .spinner{width:16px;height:16px;border:2px solid #cfe2ff;border-top-color:#3b82f6;border-radius:50%;display:inline-block;animation:spin .8s linear infinite}
+  @keyframes spin{to{transform:rotate(360deg)}}
+
+  code.small{font-size:.8rem}
+
+  /* Tooltip info */
+  .info-btn{display:inline-flex;align-items:center;justify-content:center;width:22px;height:22px;border-radius:999px;background:#fff;border:1px solid #dbe5ff;color:#2563eb;font-weight:600;cursor:pointer}
+  .tooltip{position:absolute;top:10px;right:10px}
+  .tooltip-panel{position:absolute;top:28px;right:0;min-width:280px;max-width:92vw;padding:10px 12px;background:#fff;border:1px solid #e5e7eb;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,.08);font-size:.9rem;color:#334155;display:none;z-index:10}
+  .tooltip-panel code{font-size:.85rem;background:#f8fafc;padding:2px 4px;border-radius:6px}
+  .tooltip.open .tooltip-panel{display:block}
+
+  /* Créditos no pé */
+  .credit{margin-top:12px;text-align:center;color:#94a3b8;font-size:.85rem}
+
+  /* --- Mobile tweaks --- */
+  @media (max-width: 560px){
+    .grid{ grid-template-columns:1fr; align-items:start; }
+    .card{ overflow:hidden; } /* corta calquera UI nativa que sobresae */
+    .row{ overflow:hidden; }
+    .field input{ font-size:16px; } /* evita zoom en iOS ao focar */
+  }
+
+  /* Pequeno hack para Safari iOS (detectar WebKit mobile) */
+  @supports (-webkit-touch-callout: none){
+    input[type="datetime-local"]{
+      line-height:1.2; /* estabiliza altura do control nativo */
     }
-    *{box-sizing:border-box}
-    html,body{margin:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,'Helvetica Neue',Arial}
-    .wrap{min-height:100dvh;display:flex;align-items:center;justify-content:center;padding:18px}
-    .card{width:100%;max-width:760px;background:var(--card);border-radius:16px;padding:20px 18px;box-shadow:0 10px 30px rgba(0,0,0,.06),0 2px 6px rgba(0,0,0,.04);border:1px solid rgba(0,0,0,.04)}
-    h1{font-size:1.2rem;margin:0 0 12px}
-    p.sub{margin:0 0 16px;color:var(--muted);font-size:.95rem}
-    .grid{display:grid;gap:12px;grid-template-columns:1fr 1fr}
-    .grid .full{grid-column:1/-1}
-    label{display:block;font-size:.9rem;margin:0 0 6px 2px;color:#334155}
-    input,button{width:100%;padding:12px 14px;border-radius:12px;border:1.5px solid #e5e7eb;background:#fafcff;font-size:1rem;outline:none;transition:border .15s,box-shadow .15s,background .15s}
-    input:focus{border-color:var(--accent);box-shadow:0 0 0 4px var(--ring);background:#fff}
-    input.is-bad{border-color:var(--bad)}
-    .hint{font-size:.8rem;color:var(--muted);margin-top:6px}
-    .error{font-size:.8rem;color:var(--bad);margin-top:6px;display:none}
-    .error.show{display:block}
-    .result{margin-top:16px;padding:14px;border-radius:12px;background:linear-gradient(180deg,var(--accent-2),#e9f4ff);border:1px solid rgba(106,166,255,.35);position:relative}
-    .result h2{margin:0 0 6px;font-size:1.05rem;display:flex;align-items:center;gap:8px}
-    .kv{display:flex;justify-content:space-between;gap:10px;padding:8px 0;border-top:1px dashed rgba(0,0,0,.08)}
-    .kv:first-of-type{border-top:none}
-    .kv b{font-variant-numeric:tabular-nums}
-    .ok{color:var(--ok)} .muted{color:var(--muted)}
-    .row{padding:12px;border:1px dashed rgba(0,0,0,.08);border-radius:12px;background:#fbfdff}
-    .actions{display:flex;gap:10px;flex-wrap:wrap}
-    button.primary{background:linear-gradient(180deg,#6aa6ff,#4f8df3);color:#fff;border:none}
-    button:disabled{opacity:.6;cursor:not-allowed}
-    .badge{display:inline-flex;align-items:center;gap:8px;font-size:.9rem;padding:8px 10px;border-radius:999px;border:1px solid #e5e7eb;background:#fff;color:#374151}
-    .badge.ok{border-color:rgba(16,185,129,.25);color:#065f46;background:rgba(16,185,129,.06)}
-    .badge.err{border-color:rgba(239,68,68,.25);color:#7f1d1d;background:rgba(239,68,68,.06)}
-    .beta{display:inline-block;font-size:.75rem;background:#fff3cd;border:1px solid #facc15;color:#854d0e;padding:6px 10px;border-radius:999px}
-    .spinner{width:16px;height:16px;border:2px solid #cfe2ff;border-top-color:#3b82f6;border-radius:50%;display:inline-block;animation:spin .8s linear infinite}
-    @keyframes spin{to{transform:rotate(360deg)}}
-    @media (max-width:560px){.grid{grid-template-columns:1fr}}
-    code.small{font-size:.8rem}
-    /* Tooltip info */
-    .info-btn{display:inline-flex;align-items:center;justify-content:center;width:22px;height:22px;border-radius:999px;background:#fff;border:1px solid #dbe5ff;color:#2563eb;font-weight:600;cursor:pointer}
-    .tooltip{position:absolute;top:10px;right:10px}
-    .tooltip-panel{position:absolute;top:28px;right:0;min-width:280px;max-width:92vw;padding:10px 12px;background:#fff;border:1px solid #e5e7eb;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,.08);font-size:.9rem;color:#334155;display:none;z-index:10}
-    .tooltip-panel code{font-size:.85rem;background:#f8fafc;padding:2px 4px;border-radius:6px}
-    .tooltip.open .tooltip-panel{display:block}
-    /* Créditos simples no pé */
-    .credit{margin-top:12px;text-align:center;color:#94a3b8;font-size:.85rem}
-    /* Evita que os campos forcen o ancho da columna no grid */
-.field{ min-width: 0; }
-
-/* Asegura que inputs e botóns nunca superen a columna */
-input, button{ max-width: 100%; }
-
-/* Os datetime-local axústanse ao contedor e non desbordan */
-input[type="datetime-local"]{
-  inline-size: 100%;          /* equivalente a width:100% en writing-mode LTR */
-  max-inline-size: 100%;
-  box-sizing: border-box;
-  min-height: 44px;           /* mellor “tap target” en móbil */
-}
-
-/* (Opcional) en móbil, unha soa columna: */
-@media (max-width: 560px){
-  .grid{ grid-template-columns: 1fr; align-items: start; }
-  .row{ overflow: hidden; }       /* por se o picker mete un pseudo-ícono que sobresae */
-  .field input{ font-size: 16px;} /* evita zoom en iOS ao focar */
-}
-  </style>
+  }
+</style>
 </head>
 <body>
   <div class="wrap">
