--- a/index.html
+++ b/index.html
@@ -22,15 +22,12 @@
   html,body{
     margin:0;background:var(--bg);color:var(--text);
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,'Helvetica Neue',Arial;
-    overflow-x:hidden; /* evita desprazamento horizontal en móbil */
+    overflow-x:hidden;
     -webkit-text-size-adjust:100%;
     text-size-adjust:100%;
   }
 
-  .wrap{
-    min-height:100dvh;display:flex;align-items:center;justify-content:center;
-    padding:18px;
-  }
+  .wrap{ min-height:100dvh;display:flex;align-items:center;justify-content:center;padding:18px; }
   .card{
     width:100%;max-width:760px;background:var(--card);border-radius:16px;
     padding:20px 18px;box-shadow:0 10px 30px rgba(0,0,0,.06),0 2px 6px rgba(0,0,0,.04);
@@ -39,39 +36,25 @@
   h1{font-size:1.2rem;margin:0 0 12px}
   p.sub{margin:0 0 16px;color:var(--muted);font-size:.95rem}
 
-  /* --- Layout --- */
   .grid{display:grid;gap:12px;grid-template-columns:1fr 1fr}
   .grid .full{grid-column:1/-1}
-  .row{
-    padding:12px;border:1px dashed rgba(0,0,0,.08);border-radius:12px;background:#fbfdff;
-  }
-  .field{
-    min-width:0; /* crítica: evita que o input expanda a columna */
-  }
-
+  .row{ padding:12px;border:1px dashed rgba(0,0,0,.08);border-radius:12px;background:#fbfdff; }
+  .field{ min-width:0; }
   label{display:block;font-size:.9rem;margin:0 0 6px 2px;color:#334155}
 
-  /* --- Inputs & botóns --- */
   input,button{
-    width:100%;max-width:100%;min-width:0;display:block;
-    padding:12px 14px;border-radius:12px;border:1.5px solid #e5e7eb;background:#fafcff;
+    width:100%;display:block;padding:12px 14px;border-radius:12px;border:1.5px solid #e5e7eb;background:#fafcff;
     font-size:1rem;outline:none;transition:border .15s,box-shadow .15s,background .15s
   }
   input:focus{border-color:var(--accent);box-shadow:0 0 0 4px var(--ring);background:#fff}
   input.is-bad{border-color:var(--bad)}
 
-  /* Datetime: nunca desbordar e reservar espazo para o indicador nativo */
   input[type="datetime-local"]{
-    inline-size:100%; max-inline-size:100%; min-width:0;
-    min-height:44px; /* tap target cómodo */
-    padding-right:38px; /* por se o indicador nativo ocupa espazo */
-    overflow:hidden;
+    inline-size:100%; max-inline-size:100%; min-width:0; min-height:44px; padding-right:38px; overflow:hidden;
     background-clip: padding-box;
   }
-  /* axustes dos “botóns” internos webkit */
   input::-webkit-calendar-picker-indicator{ margin:0; padding:0; }
-  input::-webkit-inner-spin-button,
-  input::-webkit-clear-button{ height:1.2em; }
+  input::-webkit-inner-spin-button, input::-webkit-clear-button{ height:1.2em; }
 
   .hint{font-size:.8rem;color:var(--muted);margin-top:6px}
   .error{font-size:.8rem;color:var(--bad);margin-top:6px;display:none}
@@ -90,6 +73,9 @@
 
   .actions{display:flex;gap:10px;flex-wrap:wrap}
   button.primary{background:linear-gradient(180deg,#6aa6ff,#4f8df3);color:#fff;border:none}
+  button.ghost{
+    background:#fff;border:1px solid #e5e7eb;color:#374151;
+  }
   button:disabled{opacity:.6;cursor:not-allowed}
   .badge{display:inline-flex;align-items:center;gap:8px;font-size:.9rem;padding:8px 10px;border-radius:999px;border:1px solid #e5e7eb;background:#fff;color:#374151}
   .badge.ok{border-color:rgba(16,185,129,.25);color:#065f46;background:rgba(16,185,129,.06)}
@@ -101,40 +87,46 @@
 
   code.small{font-size:.8rem}
 
-  /* Tooltip info */
   .info-btn{display:inline-flex;align-items:center;justify-content:center;width:22px;height:22px;border-radius:999px;background:#fff;border:1px solid #dbe5ff;color:#2563eb;font-weight:600;cursor:pointer}
   .tooltip{position:absolute;top:10px;right:10px}
   .tooltip-panel{position:absolute;top:28px;right:0;min-width:280px;max-width:92vw;padding:10px 12px;background:#fff;border:1px solid #e5e7eb;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,.08);font-size:.9rem;color:#334155;display:none;z-index:10}
   .tooltip-panel code{font-size:.85rem;background:#f8fafc;padding:2px 4px;border-radius:6px}
   .tooltip.open .tooltip-panel{display:block}
 
-  /* Créditos no pé */
   .credit{margin-top:12px;text-align:center;color:#94a3b8;font-size:.85rem}
 
-  /* --- Mobile tweaks (pantallas pequenas) --- */
   @media (max-width: 560px){
     .wrap{ padding:14px; }
     .grid{ grid-template-columns:1fr; align-items:start; }
-    .card{ overflow:hidden; } /* corta calquera UI nativa que sobresae */
-    .row{ overflow:hidden; padding:10px; } /* un chisco menos de padding */
-    .field input{ font-size:16px; } /* evita zoom en iOS ao focar */
-    /* Limitar aínda máis os datetime en pantallas estreitas */
-    input[type="datetime-local"]{
-      padding:10px 34px 10px 12px; /* máis lixeiro e espazo para indicador */
-      max-width:100%;
-      min-width:0;
-    }
+    .card{ overflow:hidden; }
+    .row{ overflow:hidden; padding:10px; }
+    .field input{ font-size:16px; }
+    input[type="datetime-local"]{ padding:10px 34px 10px 12px; max-width:100%; min-width:0; }
+  }
+  @supports (-webkit-touch-callout: none){
+    input[type="datetime-local"]{ -webkit-appearance:none; appearance:none; line-height:1.2; padding-right:12px; }
   }
 
-  /* --- Fix específico WebKit/iOS (Safari & Chrome en iOS) --- */
-  @supports (-webkit-touch-callout: none){
-    input[type="datetime-local"]{
-      -webkit-appearance:none; appearance:none; /* elimina chrome nativo problemático */
-      line-height:1.2;
-      padding-right:12px; /* xa non precisamos reservar antes */
-    }
+  /* ===== Modal Axuda CSV ===== */
+  .modal-backdrop{
+    position:fixed; inset:0; background:rgba(15,23,42,.5);
+    display:none; align-items:center; justify-content:center; padding:16px; z-index:50;
   }
-</style>
+  .modal-backdrop.show{ display:flex; }
+  .modal{
+    width:min(720px,100%); background:#fff; border-radius:16px; border:1px solid rgba(0,0,0,.06);
+    box-shadow:0 20px 60px rgba(0,0,0,.18); padding:18px 18px 16px;
+  }
+  .modal h3{ margin:0 0 8px; font-size:1.05rem; }
+  .modal p{ margin:.25rem 0 .75rem; color:#475569 }
+  .modal ol{ margin:.5rem 0 1rem 1.1rem; padding:0; }
+  .modal li{ margin:.4rem 0; }
+  .modal .modal-actions{ display:flex; justify-content:flex-end; gap:10px; margin-top:8px; }
+  .kbd{
+    display:inline-block; border:1px solid #e2e8f0; border-bottom-width:2px; border-radius:6px;
+    padding:2px 6px; font-size:.9rem; background:#f8fafc; color:#334155;
+  }
+  </style>
 </head>
 <body>
   <div class="wrap">
@@ -175,7 +167,6 @@
         <div class="result full" aria-live="polite">
           <h2>
             Resultado
-            <!-- Tooltip info dentro do panel de resultados -->
             <span class="tooltip" id="tip-info">
               <button type="button" class="info-btn" aria-label="Información">i</button>
               <div class="tooltip-panel" role="dialog" aria-label="Información">
@@ -192,7 +183,6 @@
           <div class="kv"><span>🧪 Densidade estimada (g/ml):</span><b id="out-densidade" class="muted">—</b></div>
           <div class="kv"><span>🥛 Litros estimados (L):</span><b id="out-litros" class="muted">—</b></div>
           <div class="kv"><span>Estado:</span><b id="out-estado" class="muted">Introduce valores válidos…</b></div>
-          
         </div>
       </div>
 
@@ -200,7 +190,15 @@
       <div class="grid row" style="margin-top:14px">
         <div class="field full">
           <div class="beta" style="margin-bottom:8px">VERSIÓN BETA: o módulo CSV está en probas</div>
-          <label for="csv">CSV de visitas (Lely Horizon, formato exacto)</label>
+
+          <!-- Etiqueta + botón Axuda -->
+          <div style="display:flex;align-items:center;justify-content:space-between;gap:10px;flex-wrap:wrap">
+            <label for="csv" style="margin:0">CSV de visitas (Lely Horizon, formato exacto)</label>
+            <button id="btn-help" type="button" class="ghost" aria-haspopup="dialog" aria-controls="modal-csv">
+              📘 Axuda CSV
+            </button>
+          </div>
+
           <input id="csv" type="file" accept=".csv" />
           <div class="hint">
             Cabeceira obrigatoria (Horizon): <code class="small">"Número de vaca","Fecha/hora de visita","Producción de leche","Tiempo en cubículo"</code><br>
@@ -234,7 +232,29 @@
         </div>
       </div>
     </div>
-    
+  </div>
+
+  <!-- ===== Modal Axuda CSV ===== -->
+  <div id="modal-backdrop" class="modal-backdrop" aria-hidden="true">
+    <div id="modal-csv" class="modal" role="dialog" aria-modal="true" aria-labelledby="modal-ttl" aria-describedby="modal-desc">
+      <h3 id="modal-ttl">Como xerar o CSV en Lely Horizon</h3>
+      <p id="modal-desc" class="hint">Guía rápida para exportar o informe correcto.</p>
+      <ol>
+        <li><b>Ir</b> ao informe de visitas de <b>ordeño últimas 24h</b> e <b>duplicar</b>. Pódese renomear a, por exemplo, <i>Leite tanque</i>.</li>
+        <li>No informe duplicado, deixa <b>só</b> estes campos e <b>nesta orde</b>: <u>Fecha/hora de visita</u>, <u>Producción de leche</u> (desactiva os <b>dous</b> checkbox para que non faga nin media nin suma) e <u>Tiempo en cubículo</u>.</li>
+        <li>En <b>Filtro</b>, activa as <b>duas</b> casiñas de <i>criterios fixo</i> e tamén a de <i>preguntar</i>.</li>
+        <li>En <b>Data de visita</b> podes poñer <i>día</i> e “entre 0 e 2” (dous últimos días) ou as datas exactas que queiras. <b>Importante</b>: deben estar completos os días das recollidas e os intermedios.</li>
+        <li>Cada vez que queiras cambiar as datas, vai a <b>Axustes do informe</b>.</li>
+        <li>Despois, preme en <b>Exportar como CSV</b> e garda o ficheiro no PC.</li>
+        <li>No aplicativo, introduce <b>graxa</b>, <b>proteína</b> e <b>temperatura</b> da recollida. Logo preme <b>Examinar</b> e escolle o CSV. Pon as <b>datas das recollidas</b> coa <b>hora</b> que aparece en <i>Gestionar → Tanque</i> no Lely Horizon.</li>
+        <li>Preme <b>Calcular</b> para obter os <b>kilos</b> entre recollidas e a <b>conversión a litros</b> segundo a densidade (graxa, proteína e temperatura).</li>
+      </ol>
+      <div class="modal-actions">
+        <button id="modal-close" type="button" class="ghost">Pechar</button>
+        <button id="modal-close-primary" type="button" class="primary">Entendido</button>
+      </div>
+      <p class="hint" style="margin-top:10px">💡 Atallo: preme <span class="kbd">?</span> ou <span class="kbd">F1</span> para abrir esta axuda.</p>
+    </div>
   </div>
 
   <script>
@@ -279,7 +299,6 @@
       od:$('out-densidade'),ol:$('out-litros'),os:$('out-estado')
     };
 
-    // Valores por defecto
     window.addEventListener('DOMContentLoaded', ()=>{
       el.g.value = '3.50';
       el.p.value = '3.30';
@@ -335,8 +354,7 @@
     }
 
     /* ==========
-      PARTE 2: CSV + cálculo entre recollidas (validación automática)
-      (intervalo [inicio, fin), exclusión por cubículo; MM:SS)
+      PARTE 2: CSV + cálculo entre recollidas
     ========== */
     const csvInput=$('csv'), btnCalc=$('btn-calc'), busyBadge=$('busy'),
           okBadge=$('ok-badge'), errBadge=$('err-badge'), csvStatus=$('csv-status'),
@@ -353,7 +371,7 @@
       busyBadge.style.display=v?'inline-flex':'none';
     }
 
-    // Tooltip toggle
+    // Tooltip densidade
     (function(){
       const tip = document.getElementById('tip-info');
       const btn = tip.querySelector('.info-btn');
@@ -413,19 +431,16 @@
           const a=getPickerDate(dt1.value), b=getPickerDate(dt2.value);
           const {totalKilos, contadas, debug} = computeSum(parsedRows, a, b);
 
-          // Resumo UI
           outRange.textContent=`${fmtDate(a)} → ${fmtDate(b)}`;
           outRows.textContent=String(contadas);
           outKilosCsv.textContent=new Decimal(totalKilos).toFixed(2);
           outEstadoCsv.textContent='Cálculo rematado ✅';
           sumPanel.style.display='block';
 
-          // Pasa kilos ao campo e recalcula densidade->litros
           const kRounded = Math.round(totalKilos);
           el.k.value = String(kRounded);
           recalc();
 
-          // ---- LOG FINAL JSON para análise ----
           console.log('%cResumo JSON','color:#059669;font-weight:bold');
           console.log(JSON.stringify(debug, null, 2));
         }catch(e){
@@ -465,7 +480,7 @@
 
         const visita=parseYmdHmLocal(fechaHora);
         const kilos=parseFloat(prod);
-        const cubSec=mmssToSeconds(tempoCub); // MM:SS → segundos
+        const cubSec=mmssToSeconds(tempoCub);
         rows.push({vaca:parseInt(numVaca,10), visita, kilos, cubSec});
       }
       return {rows};
@@ -492,17 +507,12 @@
     function addSeconds(d,secs){
       return new Date(d.getFullYear(),d.getMonth(),d.getDate(),d.getHours(),d.getMinutes(),d.getSeconds()+secs,0);
     }
-    function fmt2(n){return String(n).padStart(2,'0');}
-    // REEMPLAZA a función fmtDate por esta
-function fmtDate(d){
-  const fmt2 = (n)=> String(n).padStart(2,'0');
-  return `${d.getFullYear()}-${fmt2(d.getMonth()+1)}-${fmt2(d.getDate())} ${fmt2(d.getHours())}:${fmt2(d.getMinutes())}:${fmt2(d.getSeconds())}`;
-}
+    function fmtDate(d){
+      const p=(n)=> String(n).padStart(2,'0');
+      return `${d.getFullYear()}-${p(d.getMonth()+1)}-${p(d.getDate())} ${p(d.getHours())}:${p(d.getMinutes())}:${p(d.getSeconds())}`;
+    }
 
-    // ALGORITMO:
-    // Inclúe se: visita >= dtIni e visita < dtFin.  [inicio, fin)
-    // EXCLÚE se: visita + tempo_en_cubículo (en segundos) > dtFin.
-    // Logs por exclusión e JSON final para análise.
+    // ALGORITMO [inicio, fin) + exclusión por cubículo
     function computeSum(rows, dtIni, dtFin){
       let total=new Decimal(0), contadas=0;
 
@@ -515,7 +525,6 @@ function fmtDate(d){
       for(const r of rows){
         const t=r.visita.getTime();
 
-        // fóra do intervalo [inicio, fin)
         if(t < tIni){
           excBefore++;
           excluded.push({vaca:r.vaca, visita:fmtDate(r.visita), kilos:+r.kilos.toFixed(1), cubiculo_seg:r.cubSec, fin_visita:fmtDate(addSeconds(r.visita,r.cubSec)), razon:'antes_1'});
@@ -529,7 +538,6 @@ function fmtDate(d){
           continue;
         }
 
-        // supera a 2ª pola suma co cubículo (en segundos)
         const finVisita = addSeconds(r.visita, r.cubSec);
         if(finVisita.getTime() > tFin){
           excCubiculo++;
@@ -538,7 +546,6 @@ function fmtDate(d){
           continue;
         }
 
-        // incluída
         total = total.plus(r.kilos);
         contadas++;
         included.push({vaca:r.vaca, visita:fmtDate(r.visita), kilos:+r.kilos.toFixed(1), cubiculo_seg:r.cubSec, fin_visita:fmtDate(finVisita)});
@@ -555,6 +562,41 @@ function fmtDate(d){
 
       return { totalKilos: total.toNumber(), contadas, debug };
     }
+
+    // ===== Modal Axuda CSV: abrir/pechar, atallos, accesibilidade simple =====
+    const modalBackdrop = $('modal-backdrop');
+    const modal = $('modal-csv');
+    const btnHelp = $('btn-help');
+    const btnClose = $('modal-close');
+    const btnClosePrimary = $('modal-close-primary');
+
+    function openModal(){
+      modalBackdrop.classList.add('show');
+      modalBackdrop.removeAttribute('aria-hidden');
+      // foco no título do modal
+      const ttl = document.getElementById('modal-ttl');
+      ttl && ttl.focus && ttl.focus();
+      // bloquear scroll fondo
+      document.body.style.overflow='hidden';
+    }
+    function closeModal(){
+      modalBackdrop.classList.remove('show');
+      modalBackdrop.setAttribute('aria-hidden','true');
+      document.body.style.overflow='';
+      // devolver foco ao botón axuda
+      btnHelp && btnHelp.focus && btnHelp.focus();
+    }
+
+    btnHelp.addEventListener('click', openModal);
+    btnClose.addEventListener('click', closeModal);
+    btnClosePrimary.addEventListener('click', closeModal);
+    modalBackdrop.addEventListener('click', (e)=>{ if(e.target===modalBackdrop) closeModal(); });
+    document.addEventListener('keydown', (e)=>{
+      if(e.key==='Escape' && modalBackdrop.classList.contains('show')) closeModal();
+      if((e.key==='?' || e.key==='F1') && !modalBackdrop.classList.contains('show')){
+        e.preventDefault(); openModal();
+      }
+    });
 
     // Inicialización
     setMinForDt2();
