--- a/index.html
+++ b/index.html
@@ -638,8 +638,8 @@
             <i>criterios fixo</i> e tamén a de <i>preguntar</i>.
           </li>
           <li>
-            En <b>Data de visita</b> podes poñer <i>día</i> e “entre 0 e 2”
-            (dous últimos días) ou as datas exactas que queiras.
+            En <b>Data de visita</b> podes poñer <i>días</i> e “entre 0 e 2”
+            (dous últimos días) ou 0 e 5 ou as datas exactas que queiras.
             <b>Importante</b>: deben estar completos os días das recollidas e os
             intermedios.
           </li>
