--- a/index.html
+++ b/index.html
@@ -623,44 +623,74 @@
         </p>
         <ol>
           <li>
-            <b>Ir</b> ao informe de visitas de <b>ordeño últimas 24h</b> e
-            <b>duplicar</b>. Pódese renomear a, por exemplo,
-            <i>Leite tanque</i>.
+            <b>Ir</b> ao informe de <b>visitas de ordeño últimas 24h</b> e
+            <b>duplicar</b>.
+            <i>(Pódese renomear, por exemplo, <u>Leite tanque</u>)</i>
           </li>
+
           <li>
-            No informe duplicado, deixa <b>só</b> estes campos e
-            <b>nesta orde</b>: <u>Fecha/hora de visita</u>,
-            <u>Producción de leche</u> (desactiva os <b>dous</b> checkbox para
-            que non faga nin media nin suma) e <u>Tiempo en cubículo</u>.
+            No informe duplicado deixa só estes <b>campos, nesta orde</b>:
+            <ul>
+              <li><u>Fecha/hora de visita</u></li>
+              <li>
+                <u>Producción de leche</u> (desactiva os dous checkbox, para que
+                non faga nin media nin suma)
+              </li>
+              <li><u>Tiempo en cubículo</u></li>
+            </ul>
           </li>
+
           <li>
-            En <b>Filtro</b>, activa as <b>duas</b> casiñas de
-            <i>criterios fixo</i> e tamén a de <i>preguntar</i>.
+            En <b>Filtro</b>, marca:
+            <ul>
+              <li>As dúas casiñas de <i>criterios fixo</i></li>
+              <li>A casiña de <i>preguntar</i></li>
+            </ul>
           </li>
+
           <li>
-            En <b>Data de visita</b> podes poñer <i>días</i> e “entre 0 e 2”
-            (dous últimos días) ou 0 e 5 ou as datas exactas que queiras.
-            <b>Importante</b>: deben estar completos os días das recollidas e os
-            intermedios.
+            En <b>Data de visita</b> podes poñer:
+            <ul>
+              <li><b>Entre 0 e 2</b> → últimos dous días</li>
+              <li><b>Entre 0 e 5</b> → últimos cinco días</li>
+              <li>
+                <b>Calquera outro intervalo relativo</b>, por exemplo
+                <b>0 e 3</b>, segundo os días que precises
+              </li>
+              <li>
+                <b>Intervalos fixos entre datas</b>, por exemplo:
+                <b>26/08/1985</b> → <b>29/08/1985</b>
+              </li>
+            </ul>
+            <p>
+              ⚠️ Deben estar completos os días das recollidas e tamén os
+              intermedios.
+            </p>
           </li>
+
           <li>
-            Cada vez que queiras cambiar as datas, vai a
-            <b>Axustes do informe</b>.
+            Cando queiras cambiar datas, entra en <b>Axustes do informe</b>.
           </li>
+
+          <li>Preme en <b>Exportar como CSV</b> e garda o ficheiro no PC.</li>
+
           <li>
-            Despois, preme en <b>Exportar como CSV</b> e garda o ficheiro no PC.
+            No aplicativo:
+            <ul>
+              <li>
+                Introduce <b>graxa, proteína e temperatura</b> da recollida
+              </li>
+              <li>Preme <b>Examinar</b> e escolle o CSV</li>
+              <li>
+                Pon as <b>datas das recollidas</b> coa <b>hora</b> que aparece
+                en <i>Gestionar → Tanque</i> no Lely Horizon
+              </li>
+            </ul>
           </li>
+
           <li>
-            No aplicativo, introduce <b>graxa</b>, <b>proteína</b> e
-            <b>temperatura</b> da recollida. Logo preme <b>Examinar</b> e
-            escolle o CSV. Pon as <b>datas das recollidas</b> coa
-            <b>hora</b> que aparece en <i>Gestionar → Tanque</i> no Lely
-            Horizon.
-          </li>
-          <li>
-            Preme <b>Calcular</b> para obter os <b>kilos</b> entre recollidas e
-            a <b>conversión a litros</b> segundo a densidade (graxa, proteína e
-            temperatura).
+            Preme <b>Calcular</b> → obterás os <b>kilos entre recollidas</b> e a
+            súa <b>conversión a litros</b> segundo a densidade.
           </li>
         </ol>
         <div class="modal-actions">
