--- a/index.html
+++ b/index.html
@@ -380,22 +380,32 @@
       .modal-backdrop.show {
         display: flex;
       }
-      .modal-close-x {
+/* Botón "X" – sobrescribe o width:100% global dos botóns */
+.modal-close-x{
   position: absolute;
   top: 10px;
   right: 14px;
+  width: auto;             /* 👈 anula o 100% */
+  min-width: unset;        /* por se acaso */
+  display: inline-flex;    /* centra o símbolo dentro do botón */
+  align-items: center;
+  justify-content: center;
+  padding: 6px 10px;       /* área clicable cómoda */
   background: none;
   border: none;
+  border-radius: 8px;
   font-size: 1.5rem;
   line-height: 1;
-  cursor: pointer;
   color: #334155;
+  z-index: 2;              /* por riba do contido */
 }
-.modal-close-x:hover {
-  color: #000;
+.modal-close-x:hover{ color:#000; }
+/* (opcional) en pantallas táctiles, un pouco máis grande */
+@media (pointer: coarse){
+  .modal-close-x{ padding: 10px; font-size: 1.7rem; }
 }
 
-      .modal {
+     .modal {
   width: min(720px, 100%);
   max-height: 90vh;          /* límite de alto na pantalla */
   overflow-y: auto;          /* permite scroll interno */
@@ -405,8 +415,11 @@
   box-shadow: 0 20px 60px rgba(0,0,0,.18);
   padding: 18px 18px 16px;
   position: relative;        /* para poder posicionar a “X” */
-}
 
+  /* 👇 estas 2 liñas aseguran que funcione ben o scroll en pantallas pequenas */
+  display: flex;
+  flex-direction: column;
+}
       .modal h3 {
         margin: 0 0 8px;
         font-size: 1.05rem;
